kubernetes/products-az.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-ms
  template:
    metadata:
      labels:
        app: product-ms
    spec:
      containers:
        - name: customer-ms
          image: dargorcr.azurecr.io/product-ms:latest
          ports:
            - containerPort: 9002
