kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-ms
spec:
  type: LoadBalancer
  ports:
    - port: 9002
      protocol: TCP
      targetPort:  9002
  selector:
    app: product-ms
