kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-nwk-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: product-ms
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: customer-ms
        - podSelector:
            matchLabels:
              app: redis
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: customer-ms
        - podSelector:
            matchLabels:
              app: redis
